--- a/html/css/index.css
+++ b/html/css/index.css
@@ -1,33 +1,136 @@
 *{
 	margin: 0px;
 	padding: 0px;
+	border-radius: 10px 10px;
 }
 
-
+html, body { 
+	height: 98%;
+	width: 100%;
+}
 
 body {
-  background-color: white;
+	background-color: rgb(250,250,250);
 }
 
-nav {
-	background-color: orange;
-
+figure {
+	margin-left: 7%;
+	height: 14%;
+	width: 10%;
+	margin-top: 2%;
 }
+
+figure img {
+	height: 100%;
+	width: 100%;
+	padding-top: 1.5%;
+}
+
+nav{
+	margin: 3% 4% 1% 4%;	
+	float: right;
+	position: relative;
+	display: inline;
+}
+
+nav ul {
+	list-style-type: none;
+	overflow: hidden;
+	background-color: rgb(255,128,64);
+	float: right;
+	position: relative;
+}
+
+nav li {
+	float: left;
+}
+
+nav li a {
+	display: block;
+	text-align: center;
+	padding: 16px;
+	color: white;
+	text-decoration: none; 
+	font-family: "Courier New";
+	font-size: 20px;
+	font-weight: bold;
+}
+
+li a:hover {
+	background-color: rgb(255, 86, 4);
+}
+
 
 aside {
+	float: left;
 	position: relative;
-	float:left;
-	display: in-line;
-	background-color: darkblue;
+	display: inline;
+	background-color: rgb(0,0,128);
+	margin: 3% 4% 1% 4%;
+	color: white;
+	height: 55%;
+	width: 13%;
+	border-style: outset;
+	border-color: rgb(0,0,128);
+	margin-top: 6%;
 }
+
+aside p{
+	text-align: center;
+	padding-bottom: 20%;
+}
+
+aside p a{
+	color: white;
+	text-decoration:none; 
+	font-family: "Courier New";
+	font-size: 20px;
+	font-weight: bold;
+}
+
+aside p a:hover{
+	color: rgb(255,128,64);
+}
+
 footer {
 	position: absolute;
     bottom: 0;
 	display: block;
-	background-color: lightblue;
+	background-color: rgb(128,128,255);
+	border-color: rgb(128,128,255);
 	width: 86%;
 	height: 8%;
 	padding: 1% 3% 1% 3%;
 	margin: 3% 4% 1% 4%;
 	text-align: center;
+	border-style: outset;
+	color: white;
+}
+
+footer p a{
+	color: white;
+	text-decoration:none; 
+	font-family: "Courier New";
+	font-size: 18px;
+	font-weight: bold;
+	display: inline;
+}
+
+footer p a:hover{
+	color: rgb(255,128,64);
+}
+
+footer p{
+	margin: 1%;
+}
+
+
+
+iframe {
+	width: 72.8%;
+	height: 60%;
+	margin-top: 3%;
+	border: 0px;
+	display: inline;
+	float: right;
 }
