--- a/html/css/index.css
+++ b/html/css/index.css
@@ -5,74 +5,67 @@
 }
 
 html, body { 
-	height: 98%;
+	height: 96%;
 	width: 100%;
 }
 
 body {
+	
+	background-image: url("../imagenes/fondo3.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 	background-color: rgb(250,250,250);
 }
 
 figure {
-	margin-left: 7%;
-	height: 14%;
-	width: 10%;
-	margin-top: 2%;
-}
-
-figure img {
-	height: 100%;
-	width: 100%;
-	padding-top: 1.5%;
-}
-
-nav{
-	margin: 3% 4% 1% 4%;	
-	float: right;
-	position: relative;
 	display: inline;
 }
 
-nav ul {
-	list-style-type: none;
-	overflow: hidden;
+figure img {
+	height: 7%;
+	width: 5%;
+	position: absolute;
+    top: 2%;
+	left: 7%;
+}
+
+nav{
+	position: absolute;
+    top: 5%;
+	right: 4%;
 	background-color: rgb(255,128,64);
-	float: right;
+	height: 5%;
+	width: 20%;
+}
+
+nav a {
 	position: relative;
-}
-
-nav li {
 	float: left;
-}
-
-nav li a {
-	display: block;
-	text-align: center;
-	padding: 16px;
 	color: white;
 	text-decoration: none; 
 	font-family: "Courier New";
 	font-size: 20px;
 	font-weight: bold;
+	width: 50%;
+	height: 100%;
+	text-align: center;
 }
 
-li a:hover {
+nav a:hover {
 	background-color: rgb(255, 86, 4);
 }
 
 
 aside {
-	float: left;
-	position: relative;
-	display: inline;
 	background-color: rgb(0,0,128);
-	margin: 3% 4% 1% 4%;
 	color: white;
-	height: 55%;
-	width: 13%;
+	height: 65%;
+	width: 10%;
 	border-style: outset;
 	border-color: rgb(0,0,128);
-	margin-top: 6%;
+	position: absolute;
+    top: 15%;
+	left: 4%;	
 }
 
 aside p{
@@ -127,10 +120,9 @@ footer p{
 
 
 iframe {
-	width: 72.8%;
-	height: 60%;
-	margin-top: 3%;
-	border: 0px;
-	display: inline;
-	float: right;
+	width: 80%;
+	height: 65%;
+	position: absolute;
+    top: 15%;
+	right: 4%;
 }
