--- a/html/css/index.css
+++ b/html/css/index.css
@@ -1,7 +1,6 @@
 *{
 	margin: 0px;
 	padding: 0px;
-	border-radius: 10px 10px;
 }
 
 html, body { 
@@ -22,25 +21,29 @@ figure {
 }
 
 figure img {
-	height: 7%;
-	width: 5%;
+	height: 11.2%;
+	width: 8%;
 	position: absolute;
-    top: 2%;
-	left: 7%;
+    top: 1.5%;
+	left: 5.5%;
 }
 
 nav{
+	border-radius: 10px 10px;
 	position: absolute;
     top: 5%;
 	right: 4%;
+	border-style: outset;
 	background-color: rgb(255,128,64);
+	border-color: rgb(255,128,64);
 	height: 5%;
 	width: 20%;
 }
 
 nav a {
-	position: relative;
 	float: left;
+	margin: auto; 
+	display: flex;
 	color: white;
 	text-decoration: none; 
 	font-family: "Courier New";
@@ -48,15 +51,22 @@ nav a {
 	font-weight: bold;
 	width: 50%;
 	height: 100%;
-	text-align: center;
 }
 
 nav a:hover {
+	border-radius: 10px 10px;
 	background-color: rgb(255, 86, 4);
+}
+
+nav a p {
+	margin: auto;
+	text-align: center;
+	
 }
 
 
 aside {
+	border-radius: 10px 10px;
 	background-color: rgb(0,0,128);
 	color: white;
 	height: 65%;
@@ -86,6 +96,7 @@ aside p a:hover{
 }
 
 footer {
+	border-radius: 10px 10px;
 	position: absolute;
     bottom: 0;
 	display: block;
